# pelage-furr

./: .gitignore  CMakeLists.txt  PROGRESS.md  README.md
assets/fur_carpet/: scene.gltf
shaders/: fin_gs.hlsl  fin_vs.hlsl  osm_ps.hlsl  shell_ps.hlsl  shell_vs.hlsl
src/: FurRenderer.cpp  FurRenderer.h  GeometryGen.cpp  GeometryGen.cpp.orig  GeometryGen.cpp.patch  GeometryGen.h  main.cpp
